--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-PORT=5000
-MONGO_URI=mongodb://localhost:27017/hellfire_study
+PORT=4000
+MONGO_URI=mongodb+srv://sindhu:sindhu@cluster0.jwabsuk.mongodb.net/hellfire_study?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=mysupersecretjwtkey123
 JWT_EXPIRES_IN=7d
